<resources>
    <string name="app_name">RClass</string>
    <string name="create_new_account">Create New Account</string>
    <string name="change_new_account">Change New Account</string>
    <string name="greeting">hi.. please register first!</string>
    <string name="welcome_back">welcome back</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="title_activity_classroom_registration">Add New Classroom</string>
    <string name="classroom_name">Name</string>
    <string name="classroom_end_date">End Date</string>
    <string name="classroom_start_date">Start Date</string>
    <string name="classroom_schedule">Schedule</string>
    <string name="format_example_title">Format Example:</string>
    <string name="format_example_content1">TKTPL</string>
    <string name="format_example_content2">11-11-2020</string>
    <string name="format_example_content3">12-12-2020</string>
    <string name="format_example_content4">Monday,09:00-Monday,10:00;Friday,11:00-Friday,12:00</string>
    <string name="create_classroom">Create Classroom</string>

    <string name="hello">Hello,  </string>
    <string name="header_percentage">0%</string>
    <string name="header_title_total">Your Total Class Attendance</string>
    <string name="header_title_selected">Your Selected Class Attendance</string>
    <string name="header_time">00:00</string>
    <string name="header_date">Monday, 12/02</string>

    <string name="title_fragment_classroom_list">Classroom - All</string>
    <string name="add_new_classroom">Add New Classroom</string>
    <string name="present">present</string>
    <string name="absent">absent</string>
    <string name="not_started">not started</string>

    <string name="title_fragment_classroom_info">Classroom - Info</string>
    <string name="attend_this_class">Attend</string>
    <string name="absent_this_class">Absent</string>
    <string name="mark_as_absent">Mark As Absent</string>
    <string name="label_classroom_name">Name</string>
    <string name="label_classroom_start_date">Start</string>
    <string name="label_classroom_end_date">End</string>
    <string name="label_classroom_present">Present</string>
    <string name="label_classroom_absent">Absent</string>
    <string name="label_classroom_percentage">%</string>
    <string name="label_classroom_today">Status</string>
    <string name="label_classroom_schedule">Sched</string>
    <string name="sync">Sync</string>

    <string name="low_battery">Low Battery</string>
    <string name="low_battery_warning">Your battery is extremely low. Don\'t forget to save your attendance first before accidentally missing it..</string>
    <string name="calendar_add_notification">Schedule is saved on the calendar</string>

    <string name="notif_course_title">is currently ongoing</string>
    <string name="notif_course_desc">Don\'t forget to save your attendance! :)</string>
    <string name="notif_weather_title">Today\'s weather: </string>
    <string name="notif_weather_desc">Get prepared when going to class! :)</string>
    <string name="notif_not_connected">Please connect to internet! :)</string>
    <string name="notif_not_permitted">Please permit the permission to use this feature</string>

    <string name="request_permission">You can\'t use sync to calendar</string>

    <string name="weather_0">Clear Skies</string>
    <string name="weather_1">Partly Cloudy</string>
    <string name="weather_2">Partly Cloudy</string>
    <string name="weather_3">Mostly Cloudy</string>
    <string name="weather_4">Overcast</string>
    <string name="weather_5">Haze</string>
    <string name="weather_10">Smoke</string>
    <string name="weather_45">Fog</string>
    <string name="weather_60">Light Rain</string>
    <string name="weather_61">Rain</string>
    <string name="weather_63">Heavy Rain</string>
    <string name="weather_80">Isolated Shower</string>
    <string name="weather_95">Severe Thunderstorm</string>
    <string name="weather_97">Severe Thunderstorm</string>
    <string name="weather_100">Clear Skies</string>
    <string name="weather_101">Partly Cloudy</string>
    <string name="weather_102">Partly Cloudy</string>
    <string name="weather_103">Mostly Cloudy</string>
    <string name="weather_104">Overcast</string>
    <string name="weather_null">Unknown</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>