<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:touchscreenBlocksFocus="true">

    <TextView
        android:id="@+id/textViewFormatExampleContent4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_example_content4"
        android:textColor="@color/fade_gray"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFormatExampleContent3" />

    <TextView
        android:id="@+id/textViewFormatExampleContent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_example_content3"
        android:textColor="@color/fade_gray"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFormatExampleContent2" />

    <TextView
        android:id="@+id/textViewFormatExampleContent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_example_content2"
        android:textColor="@color/fade_gray"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFormatExampleContent" />

    <EditText
        android:id="@+id/editTextClassroomEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/rounded_corner_text_view"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/classroom_end_date"
        android:inputType="textPersonName"
        android:paddingLeft="3dp"
        android:paddingTop="13dp"
        android:paddingRight="3dp"
        android:paddingBottom="13dp"
        android:textColor="@color/fade_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFormatExampleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/format_example_title"
        android:textColor="@color/fade_gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextClassroomSchedule" />

    <TextView
        android:id="@+id/textViewFormatExampleTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/title_activity_classroom_registration"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextClassroomName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewFormatExampleContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_example_content1"
        android:textColor="@color/fade_gray"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFormatExampleTitle" />

    <EditText
        android:id="@+id/editTextClassroomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner_text_view"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/classroom_name"
        android:inputType="textPersonName"
        android:paddingLeft="3dp"
        android:paddingTop="13dp"
        android:paddingRight="3dp"
        android:paddingBottom="13dp"
        android:textColor="@color/fade_gray"
        app:layout_constraintBottom_toTopOf="@+id/editTextClassroomStartDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextClassroomStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner_text_view"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/classroom_start_date"
        android:inputType="textPersonName"
        android:paddingLeft="3dp"
        android:paddingTop="13dp"
        android:paddingRight="3dp"
        android:paddingBottom="13dp"
        android:textColor="@color/fade_gray"
        app:layout_constraintBottom_toTopOf="@+id/editTextClassroomEndDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextClassroomSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner_text_view"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/classroom_schedule"
        android:inputType="textPersonName"
        android:paddingLeft="3dp"
        android:paddingTop="13dp"
        android:paddingRight="3dp"
        android:paddingBottom="13dp"
        android:textColor="@color/fade_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextClassroomEndDate" />

    <Button
        android:id="@+id/buttonCreateClassroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_corner_button"
        android:onClick="onButtonCreateClassroomClicked"
        android:paddingLeft="33dp"
        android:paddingTop="10dp"
        android:paddingRight="33dp"
        android:paddingBottom="10dp"
        android:text="@string/create_classroom"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>