<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentClassroomInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ClassroomInfoFragment">

    <Button
        android:id="@+id/buttonAttendClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner_button"
        android:onClick="onButtonAttendClassClicked"
        android:paddingLeft="33dp"
        android:paddingTop="10dp"
        android:paddingRight="33dp"
        android:paddingBottom="10dp"
        android:text="@string/attend_this_class"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonAbsentClass"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewFormatExampleTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/title_fragment_classroom_info"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutHeaderDashboard" />

    <Button
        android:id="@+id/buttonAbsentClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner_button"
        android:onClick="onButtonAbsentClassClicked"
        android:paddingLeft="33dp"
        android:paddingTop="10dp"
        android:paddingRight="33dp"
        android:paddingBottom="10dp"
        android:text="@string/absent_this_class"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonAttendClass" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHeaderDashboard"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewHeaderHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="40dp"
            android:text="@string/hello"
            android:textColor="@color/fade_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewHeaderPercentage"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewHeaderUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:textColor="@color/fade_gray"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewHeaderPercentage"
            app:layout_constraintStart_toEndOf="@+id/textViewHeaderHello" />

        <TextView
            android:id="@+id/textViewHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="45dp"
            android:text="@string/header_title_selected"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewHeaderPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/header_percentage"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewHeaderTitle"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutClassroomInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAbsentClass"
        app:layout_constraintTop_toBottomOf="@+id/textViewFormatExampleTitle3"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="115dp">

        <TextView
            android:id="@+id/textViewValuePercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewValueAbsent" />

        <TextView
            android:id="@+id/textViewValueToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewValuePercentage" />

        <TextView
            android:id="@+id/textViewValueSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewValueToday" />

        <TextView
            android:id="@+id/textViewValuePresent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewValueEndDate" />

        <TextView
            android:id="@+id/textViewValueAbsent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewValuePresent" />

        <TextView
            android:id="@+id/textViewValueEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewValueStartDate" />

        <TextView
            android:id="@+id/textViewValueStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewValueName" />

        <TextView
            android:id="@+id/textViewLabelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_classroom_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLabelStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_classroom_start_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelName" />

        <TextView
            android:id="@+id/textViewLabelEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_classroom_end_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelStartDate" />

        <TextView
            android:id="@+id/textViewLabelPresent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_classroom_present"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelEndDate" />

        <TextView
            android:id="@+id/textViewLabelAbsent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_classroom_absent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelPresent" />

        <TextView
            android:id="@+id/textViewLabelPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_classroom_percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelAbsent" />

        <TextView
            android:id="@+id/textViewLabelToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_classroom_today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelPercentage" />

        <TextView
            android:id="@+id/textViewLabelSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/label_classroom_schedule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelToday" />

        <TextView
            android:id="@+id/textViewValueName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonSyncWithCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:onClick="onButtonSyncClicked"
        android:text="@string/sync"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutClassroomInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutHeaderDashboard" />

</androidx.constraintlayout.widget.ConstraintLayout>