<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentClassroomList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ClassroomListFragment">

    <TextView
        android:id="@+id/textViewFormatExampleTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/title_fragment_classroom_list"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutHeaderDashboard" />

    <Button
        android:id="@+id/buttonAddNewClassroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner_button"
        android:onClick="onButtonAddNewClassroomOnClicked"
        android:paddingLeft="33dp"
        android:paddingTop="10dp"
        android:paddingRight="33dp"
        android:paddingBottom="10dp"
        android:text="@string/add_new_classroom"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listViewClassroomAll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddNewClassroom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFormatExampleTitle3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHeaderDashboard"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewHeaderHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="40dp"
            android:text="@string/hello"
            android:textColor="@color/fade_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewHeaderPercentage"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewHeaderUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:textColor="@color/fade_gray"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewHeaderPercentage"
            app:layout_constraintStart_toEndOf="@+id/textViewHeaderHello" />

        <TextView
            android:id="@+id/textViewHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="45dp"
            android:text="@string/header_title_total"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewHeaderPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/header_percentage"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewHeaderTitle"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>